// A very simple protocol definition, consisting of only
// one message.

syntax = "proto3";
import "nanopb.proto";

message beacon_msg {
    uint32 uav_type = 1;
    repeated double GPS = 2 [(nanopb).max_count = 2, (nanopb).fixed_count = true];
}

message ranging_response_msg {
    uint32 delay = 1;
}